# uchariot-base

./: .gitignore  CMakeLists.txt  Native_CMakeLists.txt  README.md  bob.sh  deploy.sh  deploy_n.sh  piToolchain.cmake  send.sh  sendcmd.py  start.sh  stop.sh  toolchain.cmake
config/: robotConfig.xml
docs/: Doxyfile
include/: Base.h  CanConnection.h  I2C.h  MessageQueue.h  NetworkManager.h  NetworkingManager.h  Robot.h  Serial.h  StateReporter.h  Utils.h  VescController.h
include/controllers/: ControllerBase.h  EmptyController.h  FollowingController.h  OverrideController.h  PIDController.h  PathingController.h  SummonController.h  TeleopController.h
include/pathgen/: BSpline.h  Bezier.h  Curve.h  PathGenerator.h  Vector.h
include/subsystems/: BNO055.h  DriveBase.h  GPS.h  IMU.h  IMUBase.h  LSM6DSOX.h  Localization.h  SubsystemBase.h  Vision.h
paths/: AutonPath.kml  AutonPath.xml  BigL.kml  CraterPath.kml  CraterPath.xml  FieldPath.kml  FieldPath.xml  RockPath.xml  RockYard.kml  Test_Path.kml  path.xml
src/: CanConnection.cpp  I2C.cpp  MessageQueue.cpp  NetworkManager.cpp  NetworkingManager.cpp  Robot.cpp  Serial.cpp  StateReporter.cpp  Utils.cpp  VescController.cpp  main.cpp  test.cpp  tinyxml2.cpp
src/controllers/: FollowingController.cpp  OverrideController.cpp  PIDController.cpp  PathingController.cpp  SummonController.cpp  TeleopController.cpp
src/pathgen/: BSpline.cpp  Bezier.cpp  Curve.cpp  PathGenerator.cpp  Vector.cpp
src/subsystems/: BNO055.cpp  DriveBase.cpp  GPS.cpp  IMU.cpp  LSM6DSOX.cpp  Localization.cpp  Vision.cpp
tools/: common.py  sendcmd.py  teleopdriver.py
